Ajout text pour form

--- a/client/app/components/posts/posts.component.html
+++ b/client/app/components/posts/posts.component.html
@@ -1,5 +1,5 @@
 <div class="container">		  
-	<h1>Information du compte</h1>
+	<h1>Information du compte utilisateur</h1>
 	<h3>{{ posts.utilisateur }}</h3>
 		<div >
 			<label>Pseudo: </label>
